0.6.1
- Quick bugfix release to enable GUI properly and fix some minor bugs.

0.6.0
- Lots of GUI work done, GUI is finally official.
- Introduced assistant cache, which stores the necessary information about
  all assistants, so that they don't have to be loaded everytime on startup.
- Assistant role is no longer specified by "role" attribute, it is rather
  implied by FS location (creator/modifier/preparer directories).
- Preparer assistants can now run a "run" section specified in
  .devassistant file.
- Dependency installation is now uninterruptible, not to break rpmdb or such.
- Large rewrites of inner APIs (dependencies, yaml assistant representation).

0.5.0
- Assistants have been split to different repo, but they remain as a "part"
  of devassistant for the time being (no separate versioning, etc.)
- Fully automatic bash completion (if you use distro package or
  copy da.bash into /etc/bash_completion/)
- A new switch that allows users to choose to prefer a specific UI (gui/tty)
- Lot's of documentation added
- Option to use virtualenv in Python assistants
- Introduction simple for loops (yay!)
- Change of expression syntax (cl calls in expressions now have to be
  be called like "$(command -blabla)")
- Some optimizations of yaml loading to achieve speedup for starting.
- Tons of GUI facelifts (almost ready ;))

0.4.0
- Introduction of "preparer" assistants (use devassitant-prepare binary) that
  can checkout project from SCM and install it's dependencies according to
  .devassistant file
- Perl assistants, PHP assistant
- New way of dependency installation (first find dependencies via yum api,
  then show them to user and let him confirm, then install)
- Interactive commands now use zenity, if available, otherwise they fall
  back to terminal.
- New style of calling assistant/snippet sections
  (call: snippet.section; call: self.run_foo)
- Support for using SCLs easily (the "scl enable" command in yaml assistants)